lib/src/compiler/tests/testdata/errors/29.out
error: unknown field or method `foo`
   ╭─[line:3:17]
   │
 3 │     test_proto2.foo
   │                 ─┬─  
   │                  ╰─── this field or method doesn't exist
───╯
